--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <!--[if lt IE 7]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience. </p>
         <![endif]-->
-        <header>
+        <main id="index">
             <a href="thefeed.html">
             <img src="img/thefeed2.gif" alt="A gif of a skiier going down a race course" width="750">
             </a>
-        </header>
+        </main>
 
         <script src="" async defer></script>
     </body>
