--- a/thefeed.html
+++ b/thefeed.html
@@ -27,16 +27,32 @@
                 </a>
             <div id="ski team">
             <h3>ski team</h3>
+            <a href="https://jdwilson19.github.io/thefeed/" target="_blank">
             <h1>Janell Wilson</h1>
+            </a>
             <h1>Lili Broce</h1>
+            <a href="https://smwaldrop.github.io/thefeed/" target="_blank">
             <h1>Sydney Waldrop</h1>
+            </a>
+            <a href="https://lbrod20.github.io/the_feed/" target="_blank">
             <h1>Lucas Brodsky</h1>
+            </a>
+            <a href="https://henry3148.github.io/thefeed/" target="_blank">
             <h1>Henry Olsen</h1>
+            </a>
+            <a href="https://gabyhernandez14.github.io/thefeed/" target="_blank">
             <h1>Gaby Hernandez</h1>
+            </a>
+            <a href="https://amclaurin30.github.io/the-feed/" target="_blank">
             <h1>Anijah McLaurin</h1>
+            </a>
+            <a href="https://franceslynch.github.io/thefeed/" target="_blank">
             <h1>Frances Lynch</h1>
+            </a>
             <h1>Kelly Regino</h1>
+            <a href="https://aleezazkhan.github.io/aleeza_thefeed/" target="_blank">
             <h1>Aleeza Khan</h1>
+            </a>
             <h1>Carrie Hott</h1>
             </div>
         </nav>
